Fixed untracked files

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -1,4 +1,4 @@
-jdbc.driver.url=jdbc:oracle:thin:@localhost:1521:XE
+jdbc.driver.url=jdbc:oracle:thin:@localhost:1521/XE
 jdbc.driver.user=SYSTEM
 jdbc.driver.password=admin
 jdbc.connection.success=Connected to Oracle db
