JWA-4 Authorization. Implemented the Command and the Front-Controller patterns

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -1,5 +1,25 @@
 jdbc.driver.url=jdbc:oracle:thin:@localhost:1521/XE
 jdbc.driver.user=SYSTEM
 jdbc.driver.password=admin
-jdbc.connection.success=Connected to Oracle db
-jdbc.connection.fault=Fault on connection to Oracle db
+jdbc.driver.name=oracle.jdbc.OracleDriver
+
+dao.user.login.sql=SELECT login, password, role_id FROM harbour_users WHERE login = ?
+
+dao.user.column.login=LOGIN
+dao.user.column.password=PASSWORD
+dao.user.column.roleId=ROLE_ID
+
+path.page.index=/index.jsp
+path.page.login=/jsp/login.jsp
+path.page.main=/jsp/main.jsp
+path.page.error=/jsp/error.jsp
+
+message.loginError=Incorrect login or password.
+message.nullPage=Page not found.
+message.wrongAction=command not found or wrong
+
+sessions.attribute.nullPage=nullPage
+request.attribute.wrongAction=wrongAction
+request.attribute.errorLoginPassMessage=errorLoginPassMessage
+request.attribute.user=user
+request.parameter.command=command
