--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -3,11 +3,32 @@ jdbc.driver.user=SYSTEM
 jdbc.driver.password=admin
 jdbc.driver.name=oracle.jdbc.OracleDriver
 
-dao.user.login.sql=SELECT login, password, role_id FROM harbour_users WHERE login = ?
+dao.user.login.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE login = ?
+dao.user.id.sql=SELECT  id, login, password, role_id, status_id FROM harbour_users WHERE id = ?
+dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
+dao.status.id.sql=SELECT id, title FROM statuses WHERE id = ?
+dao.request_status.id.sql=SELECT id, title FROM request_statuses WHERE id = ?
+dao.pier.id.sql=SELECT id FROM piers WHERE id = ?
+dao.report.id.sql=SELECT id, user_from_id, user_to_id, text FROM reports WHERE id = ?
 
+dao.user.column.id=ID
 dao.user.column.login=LOGIN
 dao.user.column.password=PASSWORD
 dao.user.column.roleId=ROLE_ID
+dao.user.column.statusId=STATUS_ID
+
+dao.role.column.id=ID
+dao.role.column.title=TITLE
+
+dao.status.column.id=ID
+dao.status.column.title=TITLE
+
+dao.pier.column.id=ID
+
+dao.report.column.id=ID
+dao.report.column.from_id=USER_FROM_ID
+dao.report.column.to_id=USER_TO_ID
+dao.report.column.text=TEXT
 
 path.page.index=/index.jsp
 path.page.login=/jsp/login.jsp
