JWA-10,12 Remaining Dao added

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -5,11 +5,20 @@ jdbc.driver.name=oracle.jdbc.OracleDriver
 
 dao.user.login.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE login = ?
 dao.user.id.sql=SELECT  id, login, password, role_id, status_id FROM harbour_users WHERE id = ?
+
 dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
+
 dao.status.id.sql=SELECT id, title FROM statuses WHERE id = ?
+
 dao.request_status.id.sql=SELECT id, title FROM request_statuses WHERE id = ?
+
 dao.pier.id.sql=SELECT id FROM piers WHERE id = ?
+
 dao.report.id.sql=SELECT id, user_from_id, user_to_id, text FROM reports WHERE id = ?
+
+dao.product.id.sql=SELECT id, title, quantity, capitan_id, pier_id, arrival_date, departure_date FROM products WHERE id = ?
+
+dao.pier_assignment.id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignment WHERE id = ?
 
 dao.user.column.id=ID
 dao.user.column.login=LOGIN
@@ -29,6 +38,19 @@ dao.report.column.id=ID
 dao.report.column.from_id=USER_FROM_ID
 dao.report.column.to_id=USER_TO_ID
 dao.report.column.text=TEXT
+
+dao.product.column.id=ID
+dao.product.column.title=TITLE
+dao.product.column.quantity=QUANTITY
+dao.product.column.captain_id=CAPTAIN_ID
+dao.product.column.pier_id=PIER_ID
+dao.product.column.arrival_date=ARRIVAL_DATE
+dao.product.column.departure_date=DEPARTURE_DATE
+
+dao.pier_assignment.column.id=ID
+dao.pier_assignment.column.pier_id=PIER_ID
+dao.pier_assignment.column.user_id=USER_ID
+dao.pier_assignment.column.request_status_id=REQUEST_STATUS_ID
 
 path.page.index=/index.jsp
 path.page.login=/jsp/login.jsp
