JWA-22 Action command result abstraction created

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -65,3 +65,6 @@ request.attribute.wrongAction=wrongAction
 request.attribute.errorLoginPassMessage=errorLoginPassMessage
 request.attribute.user=user
 request.parameter.command=command
+
+command.path.showLoginPage=/controller?command=show_login_page
+command.path.showMainPage=/controller?command=show_main_page
