--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -4,7 +4,8 @@ jdbc.driver.password=admin
 jdbc.driver.name=oracle.jdbc.OracleDriver
 
 dao.user.login.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE login = ?
-dao.user.id.sql=SELECT  id, login, password, role_id, status_id FROM harbour_users WHERE id = ?
+dao.user.id.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE id = ?
+dao.user.all.sql=SELECT id, login, password, role_id, status_id FROM harbour_users
 
 dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
 
@@ -55,16 +56,20 @@ dao.pier_assignment.column.request_status_id=REQUEST_STATUS_ID
 path.page.index=/index.jsp
 path.page.login=/jsp/login.jsp
 path.page.main=/jsp/main.jsp
+path.page.admin=/jsp/admin.jsp
 
 message.loginError=Incorrect login or password.
 message.nullPage=Page not found.
 message.wrongAction=command not found or wrong
 
+request.parameter.command=command
+
 sessions.attribute.nullPage=nullPage
 request.attribute.wrongAction=wrongAction
 request.attribute.errorLoginPassMessage=errorLoginPassMessage
-request.attribute.user=user
-request.parameter.command=command
+request.mainPage.attribute.user=user
+request.adminPage.attribute.users=users
 
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
+command.path.showAdminPage=/controller?command=show_admin_page
