JWA-5 WIP (Adding users)

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -6,8 +6,10 @@ jdbc.driver.name=oracle.jdbc.OracleDriver
 dao.user.login.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE login = ?
 dao.user.id.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE id = ?
 dao.user.all.sql=SELECT id, login, password, role_id, status_id FROM harbour_users
+dao.user.crate.sql=INSERT INTO harbour_users (login, password, role_id, status_id) VALUES (?, ?, ?, ?)
 
 dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
+dao.role.all.sql=SELECT id, title FROM harbour_roles
 
 dao.status.id.sql=SELECT id, title FROM statuses WHERE id = ?
 
@@ -53,23 +55,28 @@ dao.pier_assignment.column.pier_id=PIER_ID
 dao.pier_assignment.column.user_id=USER_ID
 dao.pier_assignment.column.request_status_id=REQUEST_STATUS_ID
 
-path.page.index=/index.jsp
 path.page.login=/jsp/login.jsp
 path.page.main=/jsp/main.jsp
 path.page.admin=/jsp/admin.jsp
+path.page.createUser=/jsp/create_user.jsp
 
 message.loginError=Incorrect login or password.
-message.nullPage=Page not found.
 message.wrongAction=command not found or wrong
 
 request.parameter.command=command
 
-sessions.attribute.nullPage=nullPage
 request.attribute.wrongAction=wrongAction
 request.attribute.errorLoginPassMessage=errorLoginPassMessage
 request.mainPage.attribute.user=user
 request.adminPage.attribute.users=users
+request.createUserPage.attribute.roles=roles
 
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
 command.path.showAdminPage=/controller?command=show_admin_page
+command.path.showCreateUser=/controller?command=show_create_user_page
+command.path.createUser=/controller?command=create_user
+
+user.form.dto.login=login
+user.form.dto.password=password
+user.form.dto.role=roles
