Setting active status by title

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -12,6 +12,7 @@ dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
 dao.role.all.sql=SELECT id, title FROM harbour_roles
 
 dao.status.id.sql=SELECT id, title FROM statuses WHERE id = ?
+dao.status.title.sql=SELECT id, title FROM statuses WHERE title = ?
 
 dao.request_status.id.sql=SELECT id, title FROM request_statuses WHERE id = ?
 
@@ -80,3 +81,5 @@ command.path.createUser=/controller?command=create_user
 user.form.dto.login=login
 user.form.dto.password=password
 user.form.dto.role=roles
+
+db.status.active=active
