JWA-5 WIP (Editing users)

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -6,13 +6,15 @@ jdbc.driver.name=oracle.jdbc.OracleDriver
 dao.user.login.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE login = ?
 dao.user.id.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE id = ?
 dao.user.all.sql=SELECT id, login, password, role_id, status_id FROM harbour_users
-dao.user.crate.sql=INSERT INTO harbour_users (login, password, role_id, status_id) VALUES (?, ?, ?, ?)
+dao.user.create.sql=INSERT INTO harbour_users (login, password, role_id, status_id) VALUES (?, ?, ?, ?)
+dao.user.update.sql=UPDATE harbour_users SET login = ?, password = ?, role_id = ?, status_id = ? WHERE id=?
 
 dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
 dao.role.all.sql=SELECT id, title FROM harbour_roles
 
 dao.status.id.sql=SELECT id, title FROM statuses WHERE id = ?
 dao.status.title.sql=SELECT id, title FROM statuses WHERE title = ?
+dao.status.all.sql=SELECT id, title FROM statuses
 
 dao.request_status.id.sql=SELECT id, title FROM request_statuses WHERE id = ?
 
@@ -60,26 +62,35 @@ path.page.login=/jsp/login.jsp
 path.page.main=/jsp/main.jsp
 path.page.admin=/jsp/admin.jsp
 path.page.createUser=/jsp/create_user.jsp
+path.page.editUser=/jsp/edit_user.jsp
 
 message.loginError=Incorrect login or password.
 message.wrongAction=command not found or wrong
 
 request.parameter.command=command
+request.editUser.parameter.id=id
 
 request.attribute.wrongAction=wrongAction
 request.attribute.errorLoginPassMessage=errorLoginPassMessage
+
 request.mainPage.attribute.user=user
+
 request.adminPage.attribute.users=users
+
 request.createUserPage.attribute.roles=roles
+
+request.editUserPage.attribute.user=user
+request.editUserPage.attribute.roles=roles
+request.editUserPage.attribute.statuses=statuses
 
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
 command.path.showAdminPage=/controller?command=show_admin_page
-command.path.showCreateUser=/controller?command=show_create_user_page
-command.path.createUser=/controller?command=create_user
 
+user.form.dto.id=id
 user.form.dto.login=login
 user.form.dto.password=password
 user.form.dto.role=roles
+user.form.dto.status=statuses
 
 db.status.active=active
