JWA-23 Moderator functionality implemented

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -8,6 +8,7 @@ dao.user.id.sql=SELECT id, login, password, role_id, status_id FROM harbour_user
 dao.user.all.sql=SELECT id, login, password, role_id, status_id FROM harbour_users
 dao.user.create.sql=INSERT INTO harbour_users (login, password, role_id, status_id) VALUES (?, ?, ?, ?)
 dao.user.update.sql=UPDATE harbour_users SET login = ?, password = ?, role_id = ?, status_id = ? WHERE id=?
+dao.user.all.notAdmins.notDeleted.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE role_id IN (SELECT id FROM harbour_roles WHERE title <> 'admin') AND status_id IN (SELECT id FROM status WHERE title <> 'deleted')
 
 dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
 dao.role.all.sql=SELECT id, title FROM harbour_roles
@@ -21,6 +22,8 @@ dao.request_status.id.sql=SELECT id, title FROM request_statuses WHERE id = ?
 dao.pier.id.sql=SELECT id FROM piers WHERE id = ?
 
 dao.report.id.sql=SELECT id, user_from_id, user_to_id, text FROM reports WHERE id = ?
+dao.report.all.sql=SELECT id, user_from_id, user_to_id, text FROM reports
+dao.report.delete.id.sql=DELETE FROM reports WHERE id = ?
 
 dao.product.id.sql=SELECT id, title, quantity, capitan_id, pier_id, arrival_date, departure_date FROM products WHERE id = ?
 
@@ -63,6 +66,9 @@ path.page.main=/jsp/main.jsp
 path.page.admin=/jsp/admin.jsp
 path.page.createUser=/jsp/create_user.jsp
 path.page.editUser=/jsp/edit_user.jsp
+path.page.moderatorUsers=/jsp/moderator_users.jsp
+path.page.moderatorReports=/jsp/moderator_reports.jsp
+path.page.report=/jsp/report.jsp
 
 message.loginError=Incorrect login or password.
 message.wrongAction=command not found or wrong
@@ -83,9 +89,24 @@ request.editUserPage.attribute.user=user
 request.editUserPage.attribute.roles=roles
 request.editUserPage.attribute.statuses=statuses
 
+request.moderatorUsersPage.attribute.users=users
+
+request.handleUserBlockingCommand.parameter.id=id
+request.handleUserBlockingCommand.parameter.nextPage=nextPage
+
+request.showReport.parameter.id=id
+
+request.showModeratorReportsPage.attribute.reports=reports
+
+request.deleteReport.attribute.id=id
+
+request.showReportPage.attribute.report=report
+
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
 command.path.showAdminPage=/controller?command=show_admin_page
+command.path.showModeratorUsersPage=/controller?command=show_moderator_users_page
+command.path.showModeratorReportsPage=/controller?command=show_moderator_reports_page
 
 user.form.dto.id=id
 user.form.dto.login=login
@@ -94,3 +115,4 @@ user.form.dto.role=roles
 user.form.dto.status=statuses
 
 db.status.active=active
+db.status.blocked=blocked
