--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -8,7 +8,7 @@ dao.user.id.sql=SELECT id, login, password, role_id, status_id FROM harbour_user
 dao.user.all.sql=SELECT id, login, password, role_id, status_id FROM harbour_users
 dao.user.create.sql=INSERT INTO harbour_users (login, password, role_id, status_id) VALUES (?, ?, ?, ?)
 dao.user.update.sql=UPDATE harbour_users SET login = ?, password = ?, role_id = ?, status_id = ? WHERE id=?
-dao.user.all.notAdmins.notDeleted.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE role_id IN (SELECT id FROM harbour_roles WHERE title <> 'admin') AND status_id IN (SELECT id FROM status WHERE title <> 'deleted')
+dao.user.all.notAdmins.notDeleted.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE role_id IN (SELECT id FROM harbour_roles WHERE title <> 'admin') AND status_id IN (SELECT id FROM statuses WHERE title <> 'deleted')
 
 dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
 dao.role.all.sql=SELECT id, title FROM harbour_roles
