JWA-26, 27 Roles filter

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -62,7 +62,6 @@ dao.pier_assignment.column.user_id=USER_ID
 dao.pier_assignment.column.request_status_id=REQUEST_STATUS_ID
 
 path.page.login=/jsp/login.jsp
-path.page.main=/jsp/main.jsp
 path.page.admin=/jsp/admin.jsp
 path.page.createUser=/jsp/create_user.jsp
 path.page.editUser=/jsp/edit_user.jsp
@@ -113,6 +112,10 @@ user.form.dto.login=login
 user.form.dto.password=password
 user.form.dto.role=roles
 user.form.dto.status=statuses
+
+session.attribute.name.role=role
+servlet.context.attribute.name.allRoles=allRoles
+servlet.context.attribute.name.commandsFactory=commandFactory
 
 db.status.active=active
 db.status.blocked=blocked
