--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,15 @@
         <url-pattern>/controller</url-pattern>
     </servlet-mapping>
     
+    <filter>
+        <filter-name>roleFilter</filter-name>
+        <filter-class>ru.rsreu.harbor.controller.filter.RoleFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>roleFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
     <error-page>
         <error-code>404</error-code>
         <location>/jsp/error.jsp</location>
