JWA-32 Added status filter

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -68,6 +68,7 @@ path.page.editUser=/jsp/edit_user.jsp
 path.page.moderatorUsers=/jsp/moderator_users.jsp
 path.page.moderatorReports=/jsp/moderator_reports.jsp
 path.page.report=/jsp/report.jsp
+path.page.inactive=/jsp/inactive.jsp
 
 message.loginError=Incorrect login or password.
 message.wrongAction=command not found or wrong
@@ -106,6 +107,7 @@ command.path.showMainPage=/controller?command=show_main_page
 command.path.showAdminPage=/controller?command=show_admin_page
 command.path.showModeratorUsersPage=/controller?command=show_moderator_users_page
 command.path.showModeratorReportsPage=/controller?command=show_moderator_reports_page
+command.path.showInactivePage=/controller?command=show_inactive_page
 
 user.form.dto.id=id
 user.form.dto.login=login
@@ -114,8 +116,10 @@ user.form.dto.role=roles
 user.form.dto.status=statuses
 
 session.attribute.name.role=role
+session.attribute.name.status=status
 servlet.context.attribute.name.allRoles=allRoles
 servlet.context.attribute.name.commandsFactory=commandFactory
+servlet.context.attribute.name.activeStatus=activeStatus
 
 db.status.active=active
 db.status.blocked=blocked
