JWA-31 login filter added

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -117,6 +117,7 @@ user.form.dto.status=statuses
 
 session.attribute.name.role=role
 session.attribute.name.status=status
+session.attribute.name.user=user
 servlet.context.attribute.name.allRoles=allRoles
 servlet.context.attribute.name.commandsFactory=commandFactory
 servlet.context.attribute.name.activeStatus=activeStatus
