--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,15 @@
     </servlet-mapping>
 
     <filter>
+        <filter-name>loginFilter</filter-name>
+        <filter-class>ru.rsreu.harbor.controller.filter.login.LoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>loginFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
         <filter-name>statusFilter</filter-name>
         <filter-class>ru.rsreu.harbor.controller.filter.status.StatusFilter</filter-class>
     </filter>
