JWA-30 Admin piers managment functionality and some refactor

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -20,6 +20,9 @@ dao.status.all.sql=SELECT id, title FROM statuses
 dao.request_status.id.sql=SELECT id, title FROM request_statuses WHERE id = ?
 
 dao.pier.id.sql=SELECT id FROM piers WHERE id = ?
+dao.pier.all.sql=SELECT id FROM piers
+dao.pier.save.sql=INSERT INTO piers VALUES(default)
+dao.pier.delete.sql=DELETE FROM piers WHERE id = ?
 
 dao.report.id.sql=SELECT id, user_from_id, user_to_id, text FROM reports WHERE id = ?
 dao.report.all.sql=SELECT id, user_from_id, user_to_id, text FROM reports
@@ -27,7 +30,8 @@ dao.report.delete.id.sql=DELETE FROM reports WHERE id = ?
 
 dao.product.id.sql=SELECT id, title, quantity, capitan_id, pier_id, arrival_date, departure_date FROM products WHERE id = ?
 
-dao.pier_assignment.id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignment WHERE id = ?
+dao.pier_assignment.id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments WHERE id = ?
+dao.pier_assignment.pier_id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments WHERE pier_id = ?
 
 dao.user.column.id=ID
 dao.user.column.login=LOGIN
@@ -69,6 +73,7 @@ path.page.moderatorUsers=/jsp/moderator_users.jsp
 path.page.moderatorReports=/jsp/moderator_reports.jsp
 path.page.report=/jsp/report.jsp
 path.page.inactive=/jsp/inactive.jsp
+path.page.adminPiers=/jsp/admin_piers.jsp
 
 message.loginError=Incorrect login or password.
 message.wrongAction=command not found or wrong
@@ -102,12 +107,18 @@ request.deleteReport.attribute.id=id
 
 request.showReportPage.attribute.report=report
 
+request.deletePierCommand.parameter.id=id
+request.showAdminPage.attribute.piers=piers
+request.showAdminPage.attribute.availabilities=availabilities
+
+
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
 command.path.showAdminPage=/controller?command=show_admin_page
 command.path.showModeratorUsersPage=/controller?command=show_moderator_users_page
 command.path.showModeratorReportsPage=/controller?command=show_moderator_reports_page
 command.path.showInactivePage=/controller?command=show_inactive_page
+command.path.showAdminPiersPage=/controller?command=show_admin_piers_page
 
 user.form.dto.id=id
 user.form.dto.login=login
