JWA-20 basic rows in request_statuses added. JWA-29 WIP: pier management added

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -18,6 +18,7 @@ dao.status.title.sql=SELECT id, title FROM statuses WHERE title = ?
 dao.status.all.sql=SELECT id, title FROM statuses
 
 dao.request_status.id.sql=SELECT id, title FROM request_statuses WHERE id = ?
+dao.request_status.title.sql=SELECT id, title FROM request_statuses WHERE title = ?
 
 dao.pier.id.sql=SELECT id FROM piers WHERE id = ?
 dao.pier.all.sql=SELECT id FROM piers
@@ -32,6 +33,11 @@ dao.product.id.sql=SELECT id, title, quantity, capitan_id, pier_id, arrival_date
 
 dao.pier_assignment.id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments WHERE id = ?
 dao.pier_assignment.pier_id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments WHERE pier_id = ?
+dao.pier_assignment.user_id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments WHERE user_id = ?
+dao.pier_assignment.create.sql=INSERT INTO pier_assignments (pier_id, user_id, request_status_id) VALUES (?, ?, ?)
+dao.pier_assignment.delete.sql=DELETE FROM pier_assignments WHERE id = ?
+dao.pier_assignment.update.sql=UPDATE pier_assignments SET pier_id = ?, user_id = ?, request_status_id = ? WHERE id = ?
+
 
 dao.user.column.id=ID
 dao.user.column.login=LOGIN
@@ -74,6 +80,7 @@ path.page.moderatorReports=/jsp/moderator_reports.jsp
 path.page.report=/jsp/report.jsp
 path.page.inactive=/jsp/inactive.jsp
 path.page.adminPiers=/jsp/admin_piers.jsp
+path.page.captainMainPage=/jsp/captain_main.jsp
 
 message.loginError=Incorrect login or password.
 message.wrongAction=command not found or wrong
@@ -111,6 +118,8 @@ request.deletePierCommand.parameter.id=id
 request.showAdminPage.attribute.piers=piers
 request.showAdminPage.attribute.availabilities=availabilities
 
+request.showCaptainMainPage.attribute.pierAssignment=pierAssignment
+
 
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
@@ -119,6 +128,7 @@ command.path.showModeratorUsersPage=/controller?command=show_moderator_users_pag
 command.path.showModeratorReportsPage=/controller?command=show_moderator_reports_page
 command.path.showInactivePage=/controller?command=show_inactive_page
 command.path.showAdminPiersPage=/controller?command=show_admin_piers_page
+command.path.showCaptainMainPage=/controller?command=show_captain_main_page
 
 user.form.dto.id=id
 user.form.dto.login=login
@@ -135,3 +145,6 @@ servlet.context.attribute.name.activeStatus=activeStatus
 
 db.status.active=active
 db.status.blocked=blocked
+db.requestStatus.requested_arrival=requested_arrival
+db.requestStatus.locked=locked
+db.requestStatus.requested_department=requested_department
