JWA-28 Dispatcher functionality added

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -37,6 +37,7 @@ dao.pier_assignment.user_id.sql=SELECT id, pier_id, user_id, request_status_id F
 dao.pier_assignment.create.sql=INSERT INTO pier_assignments (pier_id, user_id, request_status_id) VALUES (?, ?, ?)
 dao.pier_assignment.delete.sql=DELETE FROM pier_assignments WHERE id = ?
 dao.pier_assignment.update.sql=UPDATE pier_assignments SET pier_id = ?, user_id = ?, request_status_id = ? WHERE id = ?
+dao.pier_assignment.all.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments
 
 
 dao.user.column.id=ID
@@ -81,6 +82,7 @@ path.page.report=/jsp/report.jsp
 path.page.inactive=/jsp/inactive.jsp
 path.page.adminPiers=/jsp/admin_piers.jsp
 path.page.captainMainPage=/jsp/captain_main.jsp
+path.page.dispatcherMainPage=/jsp/dispatcher_main.jsp
 
 message.loginError=Incorrect login or password.
 message.wrongAction=command not found or wrong
@@ -120,6 +122,13 @@ request.showAdminPage.attribute.availabilities=availabilities
 
 request.showCaptainMainPage.attribute.pierAssignment=pierAssignment
 
+request.showDispatcherMainPageCommand.pierAssignments=pierAssignments
+request.showDispatcherMainPageCommand.piersWithAssignments=piersWithAssignments
+
+request.approveArrivalRequestCommand.parameter.pierAssignmentId=pierAssignmentId
+request.approveArrivalRequestCommand.parameter.chosenPier=chosenPier
+
+request.approveDepartmentRequestCommand.parameter.pierAssignmentId=pierAssignmentId
 
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
@@ -129,6 +138,7 @@ command.path.showModeratorReportsPage=/controller?command=show_moderator_reports
 command.path.showInactivePage=/controller?command=show_inactive_page
 command.path.showAdminPiersPage=/controller?command=show_admin_piers_page
 command.path.showCaptainMainPage=/controller?command=show_captain_main_page
+command.path.showDispatcherMainPage=/controller?command=show_dispatcher_main_page
 
 user.form.dto.id=id
 user.form.dto.login=login
@@ -146,5 +156,7 @@ servlet.context.attribute.name.activeStatus=activeStatus
 db.status.active=active
 db.status.blocked=blocked
 db.requestStatus.requested_arrival=requested_arrival
+db.requestStatus.approved_arrival=approved_arrival
 db.requestStatus.locked=locked
 db.requestStatus.requested_department=requested_department
+db.requestStatus.approved_department=approved_department
