JWA-37 Captain notification about not exist free piers added

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -121,6 +121,7 @@ request.showAdminPage.attribute.piers=piers
 request.showAdminPage.attribute.availabilities=availabilities
 
 request.showCaptainMainPage.attribute.pierAssignment=pierAssignment
+request.showCaptainMainPage.attribute.isFreePiers=isFreePiers
 
 request.showDispatcherMainPageCommand.pierAssignments=pierAssignments
 request.showDispatcherMainPageCommand.piersWithAssignments=piersWithAssignments
