--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -9,6 +9,7 @@ dao.user.all.sql=SELECT id, login, password, role_id, status_id FROM harbour_use
 dao.user.create.sql=INSERT INTO harbour_users (login, password, role_id, status_id) VALUES (?, ?, ?, ?)
 dao.user.update.sql=UPDATE harbour_users SET login = ?, password = ?, role_id = ?, status_id = ? WHERE id=?
 dao.user.all.notAdmins.notDeleted.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE role_id IN (SELECT id FROM harbour_roles WHERE title <> 'admin') AND status_id IN (SELECT id FROM statuses WHERE title <> 'deleted')
+dao.user.all.notAdminsAndModerators.notDeleted.excludeUser.sql=SELECT id, login, password, role_id, status_id FROM harbour_users WHERE role_id IN (SELECT id FROM harbour_roles WHERE title <> 'admin' and title <> 'moderator') AND status_id IN (SELECT id FROM statuses WHERE title <> 'deleted') AND id <> ?
 
 dao.role.id.sql=SELECT id, title FROM harbour_roles WHERE id = ?
 dao.role.all.sql=SELECT id, title FROM harbour_roles
@@ -28,6 +29,7 @@ dao.pier.delete.sql=DELETE FROM piers WHERE id = ?
 dao.report.id.sql=SELECT id, user_from_id, user_to_id, text FROM reports WHERE id = ?
 dao.report.all.sql=SELECT id, user_from_id, user_to_id, text FROM reports
 dao.report.delete.id.sql=DELETE FROM reports WHERE id = ?
+dao.report.save.sql=INSERT INTO reports (user_from_id, user_to_id, text) VALUES (?, ?, ?)
 
 dao.product.id.sql=SELECT id, title, quantity, capitan_id, pier_id, arrival_date, departure_date FROM products WHERE id = ?
 
@@ -83,6 +85,7 @@ path.page.inactive=/jsp/inactive.jsp
 path.page.adminPiers=/jsp/admin_piers.jsp
 path.page.captainMainPage=/jsp/captain_main.jsp
 path.page.dispatcherMainPage=/jsp/dispatcher_main.jsp
+path.page.createReportPage=/jsp/create_report.jsp
 
 message.loginError=Incorrect login or password.
 message.wrongAction=command not found or wrong
@@ -130,6 +133,13 @@ request.approveArrivalRequestCommand.parameter.pierAssignmentId=pierAssignmentId
 request.approveArrivalRequestCommand.parameter.chosenPier=chosenPier
 
 request.approveDepartmentRequestCommand.parameter.pierAssignmentId=pierAssignmentId
+
+request.showMakeReportPage.parameter.fromUser=fromUser
+request.showMakeReportPage.parameter.toUsers=toUsers
+
+request.createReportCommand.parameter.fromUserId=fromUserId
+request.createReportCommand.parameter.toUserId=toUserId
+request.createReportCommand.parameter.reportText=reportText
 
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
