JWA-33 Optional in Daos

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -87,14 +87,13 @@ path.page.captainMainPage=/jsp/captain_main.jsp
 path.page.dispatcherMainPage=/jsp/dispatcher_main.jsp
 path.page.createReportPage=/jsp/create_report.jsp
 
-message.loginError=Incorrect login or password.
 message.wrongAction=command not found or wrong
 
 request.parameter.command=command
 request.editUser.parameter.id=id
 
 request.attribute.wrongAction=wrongAction
-request.attribute.errorLoginPassMessage=errorLoginPassMessage
+request.attribute.key.errorMessage=errorMessage
 
 request.mainPage.attribute.user=user
 
@@ -171,3 +170,7 @@ db.requestStatus.approved_arrival=approved_arrival
 db.requestStatus.locked=locked
 db.requestStatus.requested_department=requested_department
 db.requestStatus.approved_department=approved_department
+
+
+message.error.loginPage=Incorrect login or password
+message.error.adminPage.edit.noSuchUser=The id is specified incorrectly or there is no user with such id
