JWA-38 Prohibiting an admin from changing his role and status

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -104,6 +104,7 @@ request.createUserPage.attribute.roles=roles
 request.editUserPage.attribute.user=user
 request.editUserPage.attribute.roles=roles
 request.editUserPage.attribute.statuses=statuses
+request.editUserPage.attribute.isSelfEditing=isSelfEditing
 
 request.moderatorUsersPage.attribute.users=users
 
