JWA-43, 44 User create/edit form validating

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -144,6 +144,8 @@ request.createReportCommand.parameter.reportText=reportText
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
 command.path.showAdminPage=/controller?command=show_admin_page
+command.path.showCreateUserPage=/controller?command=show_create_user_page
+command.path.showEditUserPage=/controller?command=show_edit_user_page
 command.path.showModeratorUsersPage=/controller?command=show_moderator_users_page
 command.path.showModeratorReportsPage=/controller?command=show_moderator_reports_page
 command.path.showInactivePage=/controller?command=show_inactive_page
@@ -172,6 +174,6 @@ db.requestStatus.locked=locked
 db.requestStatus.requested_department=requested_department
 db.requestStatus.approved_department=approved_department
 
-
 message.error.loginPage=Incorrect login or password
 message.error.adminPage.edit.noSuchUser=The id is specified incorrectly or there is no user with such id
+message.error.userForm.invalidData=Invalid data! Try again
