JWA-41 Blocking administrators and moderators backend handling

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -177,3 +177,4 @@ db.requestStatus.approved_department=approved_department
 message.error.loginPage=Incorrect login or password
 message.error.adminPage.edit.noSuchUser=The id is specified incorrectly or there is no user with such id
 message.error.userForm.invalidData=Invalid data! Try again
+message.error.handleUserBlocking.selfBlocking=Invalid ID/Block moderator or administrator attempt
