JWA-47, 48 Checking for the reports creation on moderators / administrators and checking the data for reports creation on the backend

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -152,6 +152,7 @@ command.path.showInactivePage=/controller?command=show_inactive_page
 command.path.showAdminPiersPage=/controller?command=show_admin_piers_page
 command.path.showCaptainMainPage=/controller?command=show_captain_main_page
 command.path.showDispatcherMainPage=/controller?command=show_dispatcher_main_page
+command.path.showCreateReportPage=/controller?command=show_create_report_page
 
 user.form.dto.id=id
 user.form.dto.login=login
@@ -173,8 +174,10 @@ db.requestStatus.approved_arrival=approved_arrival
 db.requestStatus.locked=locked
 db.requestStatus.requested_department=requested_department
 db.requestStatus.approved_department=approved_department
+db.report.text.emptyText=-
 
 message.error.loginPage=Incorrect login or password
 message.error.adminPage.edit.noSuchUser=The id is specified incorrectly or there is no user with such id
 message.error.userForm.invalidData=Invalid data! Try again
 message.error.handleUserBlocking.selfBlocking=Invalid ID/Block moderator or administrator attempt
+message.error.createReport=It is forbidden to create complaints about administrators or moderators
