JWA-49 Processing an attempt to view a non-existent report by a moderator

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -178,6 +178,7 @@ db.report.text.emptyText=-
 
 message.error.loginPage=Incorrect login or password
 message.error.adminPage.edit.noSuchUser=The id is specified incorrectly or there is no user with such id
+message.error.moderatorUserPage.noSuchReport=The id is specified incorrectly or there is no report with such id
 message.error.userForm.invalidData=Invalid data! Try again
 message.error.handleUserBlocking.selfBlocking=Invalid ID/Block moderator or administrator attempt
 message.error.createReport=It is forbidden to create complaints about administrators or moderators
