JWA-29 Products logic implemented

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -22,6 +22,7 @@ dao.request_status.id.sql=SELECT id, title FROM request_statuses WHERE id = ?
 dao.request_status.title.sql=SELECT id, title FROM request_statuses WHERE title = ?
 
 dao.pier.id.sql=SELECT id FROM piers WHERE id = ?
+dao.pier.user.sql=SELECT id FROM piers WHERE id IN (SELECT pier_id FROM pier_assignments WHERE user_id = ?)
 dao.pier.all.sql=SELECT id FROM piers
 dao.pier.save.sql=INSERT INTO piers VALUES(default)
 dao.pier.delete.sql=DELETE FROM piers WHERE id = ?
@@ -31,7 +32,11 @@ dao.report.all.sql=SELECT id, user_from_id, user_to_id, text FROM reports
 dao.report.delete.id.sql=DELETE FROM reports WHERE id = ?
 dao.report.save.sql=INSERT INTO reports (user_from_id, user_to_id, text) VALUES (?, ?, ?)
 
-dao.product.id.sql=SELECT id, title, quantity, capitan_id, pier_id, arrival_date, departure_date FROM products WHERE id = ?
+dao.product.id.sql=SELECT id, title, quantity, captain_id, pier_id, arrival_date, departure_date FROM products WHERE id = ?
+dao.product.all.sql=SELECT id, title, quantity, captain_id, pier_id, arrival_date, departure_date FROM products
+dao.product.all.in.harbour.sql=SELECT id, title, quantity, captain_id, pier_id, arrival_date, departure_date FROM products WHERE departure_date IS NULL
+dao.product.save.sql=INSERT INTO products(title, quantity, captain_id, pier_id, arrival_date, departure_date) VALUES (?, ?, ?, ?, (SELECT SYSDATE FROM DUAL), NULL)
+dao.product.update.sql=UPDATE products SET departure_date = (SELECT SYSDATE FROM DUAL) WHERE id = ?
 
 dao.pier_assignment.id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments WHERE id = ?
 dao.pier_assignment.pier_id.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments WHERE pier_id = ?
@@ -40,7 +45,6 @@ dao.pier_assignment.create.sql=INSERT INTO pier_assignments (pier_id, user_id, r
 dao.pier_assignment.delete.sql=DELETE FROM pier_assignments WHERE id = ?
 dao.pier_assignment.update.sql=UPDATE pier_assignments SET pier_id = ?, user_id = ?, request_status_id = ? WHERE id = ?
 dao.pier_assignment.all.sql=SELECT id, pier_id, user_id, request_status_id FROM pier_assignments
-
 
 dao.user.column.id=ID
 dao.user.column.login=LOGIN
@@ -86,6 +90,8 @@ path.page.adminPiers=/jsp/admin_piers.jsp
 path.page.captainMainPage=/jsp/captain_main.jsp
 path.page.dispatcherMainPage=/jsp/dispatcher_main.jsp
 path.page.createReportPage=/jsp/create_report.jsp
+path.page.unloadPage=/jsp/captain_unload.jsp
+path.page.uploadPage=/jsp/captain_upload.jsp
 
 message.wrongAction=command not found or wrong
 
@@ -141,6 +147,11 @@ request.createReportCommand.parameter.fromUserId=fromUserId
 request.createReportCommand.parameter.toUserId=toUserId
 request.createReportCommand.parameter.reportText=reportText
 
+request.unloadCommand.parameter.products=products
+
+request.uploadCommand.parameter.products=products
+request.uploadCommand.parameter.products.ids=productsIds
+
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
 command.path.showAdminPage=/controller?command=show_admin_page
@@ -153,6 +164,7 @@ command.path.showAdminPiersPage=/controller?command=show_admin_piers_page
 command.path.showCaptainMainPage=/controller?command=show_captain_main_page
 command.path.showDispatcherMainPage=/controller?command=show_dispatcher_main_page
 command.path.showCreateReportPage=/controller?command=show_create_report_page
+command.path.showUnloadPage=/controller?command=show_unload_page
 
 user.form.dto.id=id
 user.form.dto.login=login
