--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,7 @@
     </filter>
     <filter-mapping>
         <filter-name>loginFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/controller/*</url-pattern>
     </filter-mapping>
 
     <filter>
@@ -37,7 +37,7 @@
     </filter>
     <filter-mapping>
         <filter-name>statusFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/controller/*</url-pattern>
     </filter-mapping>
     <filter>
         <filter-name>roleFilter</filter-name>
@@ -45,12 +45,12 @@
     </filter>
     <filter-mapping>
         <filter-name>roleFilter</filter-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/controller/*</url-pattern>
     </filter-mapping>
     
     <error-page>
         <error-code>404</error-code>
-        <location>/jsp/error.jsp</location>
+        <location>/index.jsp</location>
     </error-page>
 
     <error-page>
