JWA-52 Product statistics added

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -92,6 +92,7 @@ path.page.dispatcherMainPage=/jsp/dispatcher_main.jsp
 path.page.createReportPage=/jsp/create_report.jsp
 path.page.unloadPage=/jsp/captain_unload.jsp
 path.page.uploadPage=/jsp/captain_upload.jsp
+path.page.showProductInfoPage=/jsp/products_info.jsp
 
 message.wrongAction=command not found or wrong
 
@@ -151,6 +152,8 @@ request.unloadCommand.parameter.products=products
 
 request.uploadCommand.parameter.products=products
 request.uploadCommand.parameter.products.ids=productsIds
+
+request.showProductsInfoCommand.parameter.products=products
 
 command.path.showLoginPage=/controller?command=show_login_page
 command.path.showMainPage=/controller?command=show_main_page
