--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -197,3 +197,4 @@ message.error.moderatorUserPage.noSuchReport=The id is specified incorrectly or 
 message.error.userForm.invalidData=Invalid data! Try again
 message.error.handleUserBlocking.selfBlocking=Invalid ID/Block moderator or administrator attempt
 message.error.createReport=It is forbidden to create complaints about administrators or moderators
+message.error.captain.unloadError=Form fields during unloading are filled incorrectly
