--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -198,3 +198,4 @@ message.error.userForm.invalidData=Invalid data! Try again
 message.error.handleUserBlocking.selfBlocking=Invalid ID/Block moderator or administrator attempt
 message.error.createReport=It is forbidden to create complaints about administrators or moderators
 message.error.captain.unloadError=Form fields during unloading are filled incorrectly
+message.error.captain.actionError=The past performed action is not available
