JWA-56 Captain product actions validation added

--- a/src/main/webapp/WEB-INF/classes/resources/text.properties
+++ b/src/main/webapp/WEB-INF/classes/resources/text.properties
@@ -167,7 +167,6 @@ command.path.showAdminPiersPage=/controller?command=show_admin_piers_page
 command.path.showCaptainMainPage=/controller?command=show_captain_main_page
 command.path.showDispatcherMainPage=/controller?command=show_dispatcher_main_page
 command.path.showCreateReportPage=/controller?command=show_create_report_page
-command.path.showUnloadPage=/controller?command=show_unload_page
 
 user.form.dto.id=id
 user.form.dto.login=login
@@ -199,3 +198,4 @@ message.error.handleUserBlocking.selfBlocking=Invalid ID/Block moderator or admi
 message.error.createReport=It is forbidden to create complaints about administrators or moderators
 message.error.captain.unloadError=Form fields during unloading are filled incorrectly
 message.error.captain.actionError=The past performed action is not available
+message.error.captain.productAction=This action with goods is not allowed
